--- a/744Project/Views/Transactions/Create.cshtml
+++ b/744Project/Views/Transactions/Create.cshtml
@@ -60,7 +60,7 @@
                 </div>*@
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.cardID, "CardID", htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.cardID, "Credit Card Number", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.DropDownList("cardID", null, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.cardID, "", new { @class = "text-danger" })
@@ -70,7 +70,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.storeID, "StoreName", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.DropDownList("StoreID", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.DropDownList("storeID", null, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.storeID, "", new { @class = "text-danger" })
                     </div>
                 </div>
