--- a/744Project/Views/Transactions/Edit.cshtml
+++ b/744Project/Views/Transactions/Edit.cshtml
@@ -53,14 +53,14 @@
                 </div>
 
                 @*<div class="form-group">
-                    @Html.LabelFor(model => model.transactionStatus, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        <div class="checkbox">
-                            @Html.EditorFor(model => model.transactionStatus)
-                            @Html.ValidationMessageFor(model => model.transactionStatus, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                </div>*@
+            @Html.LabelFor(model => model.transactionStatus, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.transactionStatus)
+                    @Html.ValidationMessageFor(model => model.transactionStatus, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>*@
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.cardID, "cardID", htmlAttributes: new { @class = "control-label col-md-2" })
@@ -71,12 +71,20 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.storeID, "StoreName", htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.storeID, "StoreID", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.DropDownList("StoreID", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.DropDownList("storeID", null, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.storeID, "", new { @class = "text-danger" })
                     </div>
                 </div>
+
+                @*<div class="form-group">
+            @Html.LabelFor(model => model.storeID, "StoreName", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("StoreID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.storeID, "", new { @class = "text-danger" })
+            </div>
+        </div>*@
 
 
 
