--- a/744Project/Views/Account/Login.cshtml
+++ b/744Project/Views/Account/Login.cshtml
@@ -33,12 +33,13 @@
                                     @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                                 </div>
                             </div>
-							<div class="form-group">
-								@Html.LabelFor(m => m.SecuriyQuestion, new { @class = "col-md-2 control-label" })
-								<div class="col-md-10">
-									@Model.SecuriyQuestion
-								</div>
-							</div>
+                            <div class="form-group">
+                                @Html.LabelFor(m => m.SecuriyQuestion, new { @class = "col-md-2 control-label" })
+                                <div style="display:inline">
+                                    <p style="color: #00B7FF">@Model.SecuriyQuestion</p>
+
+                                </div>
+                            </div>
 							<div class="form-group">
 								<div style="color:red">@ViewBag.Security</div>
 								@Html.LabelFor(m => m.AnswerToSecurityQuestion, new { @class = "col-md-2 control-label" })
