--- a/744Project/Views/CreditCards/Create.cshtml
+++ b/744Project/Views/CreditCards/Create.cshtml
@@ -34,19 +34,19 @@
                         @Html.ValidationMessageFor(model => model.lastName, "", new { @class = "text-danger" })
                     </div>
                 </div>
-               @*Card number:*@
+                @*Card number:*@
                 @*<div class="form-group">
-                    @Html.LabelFor(model => model.cardNumber, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.cardNumber, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.cardNumber, "", new { @class = "text-danger" })
-                    </div>
-                </div>*@
+            @Html.LabelFor(model => model.cardNumber, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.cardNumber, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.cardNumber, "", new { @class = "text-danger" })
+            </div>
+        </div>*@
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.cardExpirationDate, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.cardExpirationDate, new { htmlAttributes = new {type = "month", @class = "form-control" } })
+                        @Html.EditorFor(model => model.cardExpirationDate, new { htmlAttributes = new { type = "month", @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.cardExpirationDate, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -68,13 +68,13 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.accountID, "accountID", htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.accountID, "Account Number", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.DropDownList("accountID", null, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.accountID, "", new { @class = "text-danger" })
                     </div>
                 </div>
-
+               
 
 
 
